Modified the Jenkinsfile

--- a/Terraform/Automating Jenkins installation on EC2/webpages/Jenkinsfile
+++ b/Terraform/Automating Jenkins installation on EC2/webpages/Jenkinsfile
@@ -7,13 +7,30 @@ pipeline {
                 // Get some code from a GitHub repository
                 git branch: 'master', url: 'https://github.com/custyblak/DevOps_Repo.git'
             }
+        }
 
         stage('public') {
             steps {
-                 s3Upload consoleLogLevel: 'INFO', dontSetBuildResultOnFailure: false, dontWaitForConcurrentBuildCompletion: false, entries: [[bucket: 'my-aws-resource-bucket-21idiayeau7', excludedFile: 'Jenkinsfile', flatten: false, gzipFiles: false, keepForever: false, managedArtifacts: false, noUploadOnFailure: false, selectedRegion: 'us-east-1', showDirectlyInBrowser: false, sourceFile: '**/*', storageClass: 'STANDARD', uploadFromSlave: false, useServerSideEncryption: false]], pluginFailureResultConstraint: 'FAILURE', profileName: 'cloud_user', userMetadata: []
-                
-               }
-           }
-       }
+                s3Upload consoleLogLevel: 'INFO', 
+                         dontSetBuildResultOnFailure: false, 
+                         dontWaitForConcurrentBuildCompletion: false, 
+                         entries: [[bucket: 'my-aws-resource-bucket-21idiayeau7', 
+                                    excludedFile: 'Jenkinsfile', 
+                                    flatten: false, 
+                                    gzipFiles: false, 
+                                    keepForever: false, 
+                                    managedArtifacts: false, 
+                                    noUploadOnFailure: false, 
+                                    selectedRegion: 'us-east-1', 
+                                    showDirectlyInBrowser: false, 
+                                    sourceFile: '**/*', 
+                                    storageClass: 'STANDARD', 
+                                    uploadFromSlave: false, 
+                                    useServerSideEncryption: false]], 
+                         pluginFailureResultConstraint: 'FAILURE', 
+                         profileName: 'cloud_user', 
+                         userMetadata: []
+            }
+        }
     }
 }
